--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="theme-color" content="#020617" />
     <title>AFRAH20 — A Night For Afrah</title>
     <meta name="description" content="A cinematic, interactive birthday celebration for Afrah's 20th birthday" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preload" as="image" href="/assets/wallpaper/earth.jpg" />
   </head>
-  <body>
+  <body class="has-planet-bg">
+    <div class="planet-bg" aria-hidden="true"></div>
+    <div class="planet-overlay" aria-hidden="true"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
