--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>The January 14 Experience</title>
     <meta name="description" content="A cinematic, interactive birthday celebration for Afrah's 20th birthday" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
