--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>The January 14 Experience</title>
-    <meta name="description" content="A cinematic, interactive birthday celebration for Afrah's 20th birthday" />
+    <meta name="description" content="A small birthday world put together to add warmth to a special day.  " />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
